[tool.poetry]
name = "flirtable"
version = "0.2.0"
description = "A portable API for Airtables"
authors = ["Oleg Lavrovsky <oleg@datalets.ch>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
gunicorn = "*"
python-dotenv = "*"
flask_api = "*"
Airtable = "*"
urllib3 = ">=1.24.2"
Flask-Caching = "^1.10.1"
